@@ -24,10 +24,7 @@
         "optional" : true
       } ],
       "metadata" : {
-        "type" : {
-          "type" : "array",
-          "items" : "int"
-        }
+        "type" : { "type" : "array", "items" : "int" }
       },
       "assocKeys" : [ "q", "s" ]
     }, {
@@ -42,10 +39,7 @@
       "doc" : "An imaginary action",
       "parameters" : [ {
         "name" : "bitfield",
-        "type" : {
-          "type" : "array",
-          "items" : "boolean"
-        },
+        "type" : { "type" : "array", "items" : "boolean" },
         "default" : "[]"
       }, {
         "name" : "request",
@@ -76,10 +70,7 @@
         "doc" : "Fictional action",
         "parameters" : [ {
           "name" : "bitmap",
-          "type" : {
-            "type" : "array",
-            "items" : "boolean"
-          }
+          "type" : { "type" : "array", "items" : "boolean" }
         }, {
           "name" : "subRequest",
           "type" : "com.linkedin.groups.api.TransferOwnershipRequest"
